fix bug where menu children are visible when menu is retracted

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -34,7 +34,8 @@ html {
   display: grid;
   grid-template-rows: repeat(6, 1fr);
   grid-row-gap: 2px;
-  background-color: black; }
+  background-color: black;
+  overflow-x: hidden; }
   #menu > div {
     background-color: white; }
 
